--- a/resource-config.json
+++ b/resource-config.json
@@ -2,7 +2,7 @@
   "resources": {
     "includes": [
       {
-        "pattern": "META-INF/flamingock-metadata.txt"
+        "pattern": "META-INF/flamingock/metadata.json"
       }
     ]
   }
